@@ -153,6 +153,13 @@ NSD will bind to the listed ip\-address. Can be give multiple times
 to bind multiple ip\-addresses. Optionally, a port number can be given.
 If none are given NSD listens to the wildcard interface. Same as commandline option 
 .BR \-a.
+For servers with multiple IP addresses that can be used to send traffic
+to the internet, list them one by one, or the source address of replies
+could be wrong.  This is because if the udp socket associates a source
+address of 0.0.0.0 then the kernel picks an ip-address with which to
+send to the internet, and it picks the wrong one.  Typically needed for
+anycast instances.  Use ip-transparent to be able to list addresses that
+turn on later (typical for certain load-balancing).
 .TP
 .B interface:\fR <ip4 or ip6>[@port]
 Same as ip\-address (for easy of compatibility with unbound.conf).
