@@ -1,3 +1,8 @@
+16 July 2015: Wouter
+	- Fix #618: documented need to list ip-addresses seperately in
+	  nsd.conf if there are multiple, because the source address of
+	  replies can otherwise go wrong.
+
 10 July 2015: Wouter
 	- Fix that for expired zones NSD performs an AXFR and accepts newer
 	  and older serial numbers.
